{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 8332,
  "lineage": "b56c0cf0-8b63-a99c-d604-8bb86ba5d6be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cgw-common-db-instance-public-ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08ff8e2aeae615426",
            "domain": "vpc",
            "id": "eipalloc-0b446d11d3cce8684",
            "instance": "i-00975873156ca6ecc",
            "network_interface": "eni-07b81ffb7a935d892",
            "private_dns": "ip-172-31-11-211.us-east-2.compute.internal",
            "private_ip": "172.31.11.211",
            "public_dns": "ec2-3-20-89-105.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.89.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cgw-common-db-instance-public-ip",
              "Owner": "george_davis@trendmicro.com",
              "Project": "cgw-common"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.cgw-common-db-instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "georged-k8s-host-public-ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d9e497749a24a422",
            "domain": "vpc",
            "id": "eipalloc-060efc6e98e504b87",
            "instance": "i-03fac6ecaae81be42",
            "network_interface": "eni-0c35e2528705a9768",
            "private_dns": "ip-172-31-6-145.us-east-2.compute.internal",
            "private_ip": "172.31.6.145",
            "public_dns": "ec2-3-21-177-184.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.177.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "georged-k8s-host-public-ip",
              "Owner": "george_davis@trendmicro.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.georged-k8s-host",
            "aws_security_group.georged-ssh-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cgw-common-db-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f4665edc97a93bea",
            "arn": "arn:aws:ec2:us-east-2:666402644145:instance/i-00975873156ca6ecc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00975873156ca6ecc",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CloudOne",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07b81ffb7a935d892",
            "private_dns": "ip-172-31-11-211.us-east-2.compute.internal",
            "private_ip": "172.31.11.211",
            "public_dns": "ec2-3-20-89-105.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.89.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-08a255998f25479e4",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "cgw-common-db-sg",
              "cgw-common-web-sg",
              "georged-ssh-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c1dc41a8",
            "tags": {
              "Name": "cgw-common-db-ec2-instance",
              "Owner": "george_davis@trendmicro.com",
              "Project": "cgw-common"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0674451093c4a63e8",
              "sg-06ef143246683e438",
              "sg-07f60225ce03d424a"
            ]
          },
          "dependencies": [
            "aws_security_group.cgw-common-db-sg",
            "aws_security_group.cgw-common-web-sg",
            "aws_security_group.georged-ssh-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cgw-common-jenkins-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f4665edc97a93bea",
            "arn": "arn:aws:ec2:us-east-2:666402644145:instance/i-0f2304069d1b019dd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2304069d1b019dd",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CloudOne",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-092f7172997054081",
            "private_dns": "ip-172-31-12-195.us-east-2.compute.internal",
            "private_ip": "172.31.12.195",
            "public_dns": "ec2-18-219-69-189.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.69.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-06f01198e53baa6b9",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "cgw-common-db-sg",
              "cgw-common-web-sg",
              "georged-ssh-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c1dc41a8",
            "tags": {
              "Name": "cgw-common-jenkins-ec2-instance",
              "Owner": "george_davis@trendmicro.com",
              "Project": "cgw-common"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0674451093c4a63e8",
              "sg-06ef143246683e438",
              "sg-07f60225ce03d424a"
            ]
          },
          "dependencies": [
            "aws_security_group.cgw-common-db-sg",
            "aws_security_group.cgw-common-web-sg",
            "aws_security_group.georged-ssh-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "georged-k8s-host",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-f4f4cf91",
            "arn": "arn:aws:ec2:us-east-2:666402644145:instance/i-03fac6ecaae81be42",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Cloud1",
            "id": "i-03fac6ecaae81be42",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CloudOne",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c35e2528705a9768",
            "private_dns": "ip-172-31-6-145.us-east-2.compute.internal",
            "private_ip": "172.31.6.145",
            "public_dns": "ec2-3-21-177-184.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.177.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 240,
                "volume_id": "vol-0a30c718b16d3b647",
                "volume_size": 80,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "georged-k8s-sg",
              "georged-ssh-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c1dc41a8",
            "tags": {
              "Name": "georged-k8s-host",
              "Owner": "george_davis@trendmicro.com"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "georged-k8s-host-vol"
            },
            "vpc_security_group_ids": [
              "sg-0674451093c4a63e8",
              "sg-0d55827be351fff41"
            ]
          },
          "dependencies": [
            "aws_security_group.georged-k8s-sg",
            "aws_security_group.georged-ssh-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cgw-common-db-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666402644145:security-group/sg-07f60225ce03d424a",
            "description": "Allow CGW DB \u0026 Services traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f60225ce03d424a",
            "ingress": [
              {
                "cidr_blocks": [
                  "99.251.105.233/32",
                  "99.250.30.127/32",
                  "99.246.229.245/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "99.251.105.233/32",
                  "99.250.30.127/32",
                  "99.246.229.245/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "99.251.105.233/32",
                  "99.250.30.127/32",
                  "99.246.229.245/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cgw-common-db-sg",
            "name_prefix": null,
            "owner_id": "666402644145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cgw-common-db-sg",
              "Owner": "george_davis@trendmicro.com",
              "Project": "cgw-common"
            },
            "timeouts": null,
            "vpc_id": "vpc-67cf400e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cgw-common-web-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666402644145:security-group/sg-06ef143246683e438",
            "description": "Allow CGW Web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ef143246683e438",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cgw-common-web-sg",
            "name_prefix": null,
            "owner_id": "666402644145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cgw-common-web-sg",
              "Owner": "george_davis@trendmicro.com",
              "Project": "cgw-common"
            },
            "timeouts": null,
            "vpc_id": "vpc-67cf400e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "georged-http-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666402644145:security-group/sg-0370ebaeed2d310b4",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0370ebaeed2d310b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "georged-http-sg",
            "name_prefix": null,
            "owner_id": "666402644145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "georged-http-sg",
              "Owner": "george_davis@trendmicro.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-67cf400e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "georged-https-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666402644145:security-group/sg-082da6ab61abfd8dd",
            "description": "Allow HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082da6ab61abfd8dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "georged-https-sg",
            "name_prefix": null,
            "owner_id": "666402644145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "georged-https-sg",
              "Owner": "george_davis@trendmicro.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-67cf400e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "georged-k8s-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666402644145:security-group/sg-0d55827be351fff41",
            "description": "Allow k8s traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d55827be351fff41",
            "ingress": [
              {
                "cidr_blocks": [
                  "99.251.105.233/32",
                  "99.250.30.127/32",
                  "99.246.229.245/32"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "georged-k8s-sg",
            "name_prefix": null,
            "owner_id": "666402644145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "georged-k8s-sg",
              "Owner": "george_davis@trendmicro.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-67cf400e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "georged-nodejs-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666402644145:security-group/sg-0280537564d3133f7",
            "description": "Allow NodeJs traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0280537564d3133f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "99.251.105.233/32",
                  "99.250.30.127/32",
                  "99.246.229.245/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "99.251.105.233/32",
                  "99.250.30.127/32",
                  "99.246.229.245/32"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "99.251.105.233/32",
                  "99.250.30.127/32",
                  "99.246.229.245/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "georged-nodejs-sg",
            "name_prefix": null,
            "owner_id": "666402644145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "georged-nodejs-sg",
              "Owner": "george_davis@trendmicro.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-67cf400e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "georged-ssh-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666402644145:security-group/sg-0674451093c4a63e8",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0674451093c4a63e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "99.251.105.233/32",
                  "99.250.30.127/32",
                  "99.246.229.245/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "georged-ssh-sg",
            "name_prefix": null,
            "owner_id": "666402644145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "georged-ssh-sg",
              "Owner": "george_davis@trendmicro.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-67cf400e"
          }
        }
      ]
    },
    {
      "module": "module.cgw-team8",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "cgw-az-lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/CGW/providers/Microsoft.Network/loadBalancers/cgw-az-lb-mfvc8ks5",
            "location": "canadacentral",
            "name": "cgw-az-lb-mfvc8ks5",
            "resource_group_name": "CGW",
            "sku": "Basic",
            "tags": {
              "Name": "cgw-az-lb-mfvc8ks5",
              "Owner": "george_davis@trendmicro.com",
              "Project": "cgw",
              "Team": "team8",
              "Team-UUID": "cgw-mfvc8ks5"
            }
          },
          "dependencies": [
            "module.cgw-team8.random_string.unique-id"
          ]
        }
      ]
    },
    {
      "module": "module.cgw-team8",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cgw-az-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/CGW/providers/Microsoft.Network/networkInterfaces/cgw-az-nic-mfvc8ks5",
            "internal_domain_name_suffix": "4tx4bprgml0ehns3f5jjc2j1vb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "public",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/CGW/providers/Microsoft.Network/publicIPAddresses/cgw-az-public-ip-mfvc8ks5",
                "subnet_id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/cloudone/providers/Microsoft.Network/virtualNetworks/cloudone-vnet/subnets/default"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-0D-3A-0C-59-10",
            "name": "cgw-az-nic-mfvc8ks5",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "CGW",
            "tags": {
              "Name": "cgw-az-nic-mfvc8ks5",
              "Owner": "george_davis@trendmicro.com",
              "Project": "cgw",
              "Team": "team8",
              "Team-UUID": "cgw-mfvc8ks5"
            },
            "virtual_machine_id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/CGW/providers/Microsoft.Compute/virtualMachines/cgw-az-vm-mfvc8ks5"
          },
          "dependencies": [
            "module.cgw-team8.azurerm_public_ip.cgw-az-public-ip",
            "module.cgw-team8.random_string.unique-id"
          ]
        }
      ]
    },
    {
      "module": "module.cgw-team8",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "cgw-az-nic-sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/CGW/providers/Microsoft.Network/networkInterfaces/cgw-az-nic-mfvc8ks5|/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/CGW/providers/Microsoft.Network/networkSecurityGroups/cgw-az-ssh-sg-mfvc8ks5",
            "network_interface_id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/CGW/providers/Microsoft.Network/networkInterfaces/cgw-az-nic-mfvc8ks5",
            "network_security_group_id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/CGW/providers/Microsoft.Network/networkSecurityGroups/cgw-az-ssh-sg-mfvc8ks5"
          },
          "dependencies": [
            "module.cgw-team8.azurerm_network_interface.cgw-az-nic",
            "module.cgw-team8.azurerm_network_security_group.cgw-az-ssh-sg",
            "module.cgw-team8.azurerm_public_ip.cgw-az-public-ip",
            "module.cgw-team8.random_string.unique-id"
          ]
        }
      ]
    },
    {
      "module": "module.cgw-team8",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cgw-az-ssh-sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/CGW/providers/Microsoft.Network/networkSecurityGroups/cgw-az-ssh-sg-mfvc8ks5",
            "location": "canadacentral",
            "name": "cgw-az-ssh-sg-mfvc8ks5",
            "resource_group_name": "CGW",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-access-rule",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Name": "cgw-az-ssh-sg-mfvc8ks5",
              "Owner": "george_davis@trendmicro.com",
              "Project": "cgw",
              "Team": "team8",
              "Team-UUID": "cgw-mfvc8ks5"
            },
            "timeouts": null
          },
          "dependencies": [
            "module.cgw-team8.random_string.unique-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "georged-ssh-sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/cloudone/providers/Microsoft.Network/networkSecurityGroups/georged-ssh-sg",
            "location": "canadacentral",
            "name": "georged-ssh-sg",
            "resource_group_name": "cloudone",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Network Security Rule for 99.246.229.245/32",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-access-rule-2",
                "priority": 202,
                "protocol": "Tcp",
                "source_address_prefix": "99.246.229.245/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Network Security Rule for 99.250.30.127/32",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-access-rule-1",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "99.250.30.127/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Network Security Rule for 99.251.105.233/32",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-access-rule-0",
                "priority": 200,
                "protocol": "TCP",
                "source_address_prefix": "99.251.105.233/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Owner": "george_davis@trendmicro.com"
            },
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "georged-ssh-sg-rule",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Network Security Rule for 99.251.105.233/32",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/cloudone/providers/Microsoft.Network/networkSecurityGroups/georged-ssh-sg/securityRules/ssh-access-rule-0",
            "name": "ssh-access-rule-0",
            "network_security_group_name": "georged-ssh-sg",
            "priority": 200,
            "protocol": "TCP",
            "resource_group_name": "cloudone",
            "source_address_prefix": "99.251.105.233/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.georged-ssh-sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Network Security Rule for 99.250.30.127/32",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/cloudone/providers/Microsoft.Network/networkSecurityGroups/georged-ssh-sg/securityRules/ssh-access-rule-1",
            "name": "ssh-access-rule-1",
            "network_security_group_name": "georged-ssh-sg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "cloudone",
            "source_address_prefix": "99.250.30.127/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.georged-ssh-sg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Network Security Rule for 99.246.229.245/32",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/cloudone/providers/Microsoft.Network/networkSecurityGroups/georged-ssh-sg/securityRules/ssh-access-rule-2",
            "name": "ssh-access-rule-2",
            "network_security_group_name": "georged-ssh-sg",
            "priority": 202,
            "protocol": "Tcp",
            "resource_group_name": "cloudone",
            "source_address_prefix": "99.246.229.245/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.georged-ssh-sg"
          ]
        }
      ]
    },
    {
      "module": "module.cgw-team8",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "cgw-az-public-ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/18cb46c3-ea58-41c2-8cc6-71d8662f1203/resourceGroups/CGW/providers/Microsoft.Network/publicIPAddresses/cgw-az-public-ip-mfvc8ks5",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.151.22.202",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "cgw-az-public-ip-mfvc8ks5",
            "resource_group_name": "CGW",
            "sku": "Basic",
            "tags": {
              "Name": "cgw-az-public-ip-mfvc8ks5",
              "Owner": "george_davis@trendmicro.com",
              "Project": "cgw",
              "Team": "team8",
              "Team-UUID": "cgw-mfvc8ks5"
            }
          },
          "dependencies": [
            "module.cgw-team8.random_string.unique-id"
          ]
        }
      ]
    }
  ]
}